update: Java version to Java 21 LTS